# TheGame

./: CMakeLists.txt  common.txt  gametest.cpp  idioms.txt  main.cpp  movie_titles.txt  other.txt  text.txt  thegame.cpp  thegame.hpp  ultimate_turbo_swat_list.txt
Android/TheGame/app/: build.gradle  thegame.cpp
Android/TheGame/app/src/main/: AndroidManifest.xml
Android/TheGame/app/src/main/java/com/example/testapp/: DisplayMessageActivity.java  MainActivity.java
Android/TheGame/app/src/main/res/layout/: activity_display_message.xml  activity_main.xml
Android/TheGame/app/src/main/res/values/: strings.xml
Android/TheGame/gradle/wrapper/: gradle-wrapper.properties
